--- a/JspWebsite/src/main/webapp/WEB-INF/web.xml
+++ b/JspWebsite/src/main/webapp/WEB-INF/web.xml
@@ -1,15 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="https://jakarta.ee/xml/ns/jakartaee" xmlns:web="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_5_0.xsd http://xmlns.jcp.org/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="5.0">
-  <servlet>
-    <description></description>
-    <display-name>servletWrite</display-name>
-    <servlet-name>servletWrite</servlet-name>
-    <servlet-class>servletWrite</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>servletWrite</servlet-name>
-    <url-pattern>/servletWrite</url-pattern>
-  </servlet-mapping>
   <display-name>JspWebsite</display-name>
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
@@ -25,8 +15,25 @@
     <servlet-name>Controller</servlet-name>
     <servlet-class>com.cre.w.servlet.Controller</servlet-class>
   </servlet>
-  <servlet-mapping>
-    <servlet-name>Controller</servlet-name>
-    <url-pattern>/Controller</url-pattern>
-  </servlet-mapping>
+
+  <servlet>
+    <description></description>
+    <display-name>ServletRps</display-name>
+    <servlet-name>ServletRps</servlet-name>
+    <servlet-class>com.cre.w.servlet.ServletRps</servlet-class>
+  </servlet>
+  <servlet>
+    <description></description>
+    <display-name>BoardController</display-name>
+    <servlet-name>BoardController</servlet-name>
+    <servlet-class>com.cre.w.servlet.BoardController</servlet-class>
+  </servlet>
+
+  <servlet>
+    <description></description>
+    <display-name>MemberCntrler</display-name>
+    <servlet-name>MemberCntrler</servlet-name>
+    <servlet-class>com.cre.w.servlet.MemberCntrler</servlet-class>
+  </servlet>
+
 </web-app>
